Add properties api. Closes #5
